Create plugin/src/main/java/com/skyblock/plugin/menu/BankMenu.java — 54-slot §6Bank chest GUI implementing InventoryHolder + Listener; slot
By Jarvis agent Oracle.